--- a/public/template/question-screen.component.html
+++ b/public/template/question-screen.component.html
@@ -22,13 +22,13 @@
 					<div class="col-sm-9 form-control-static">{{$ctrl.game.question.question.name}}</div>
 				</div>
 
-				<div class="form-group" ng-show="ui.question.year">
+				<div class="form-group" ng-show="$ctrl.game.question.question.year">
 					<label class="col-sm-3 control-label" for="">Year :</label>
 					<div class="col-sm-9 form-control-static">{{$ctrl.game.question.question.year}}</div>
 				</div>
 			</div>
-			<div class="" ng-show="ui.question.type == 'deaf'">
-				<img class="" ng-src="{{ui.question.file}}" />
+			<div class="" ng-show="$ctrl.game.question.question.type == 'deaf'">
+				<img class="" ng-src="{{$ctrl.game.question.question.file}}" />
 			</div>
 		</div>
 		<div class="col-xs-6">
@@ -44,7 +44,7 @@
 					<div class="col-sm-9 form-control-static">{{$ctrl.game.nextQuestion.question.name}}</div>
 				</div>
 
-				<div class="form-group" ng-show="$ctrl.game.question.question.year">
+				<div class="form-group" ng-show="$ctrl.game.nextQuestion.question.year">
 					<label class="col-sm-3 control-label" for="">Year :</label>
 					<div class="col-sm-9 form-control-static">{{$ctrl.game.nextQuestion.question.year}}</div>
 				</div>
