--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+	padding: 0;
+	margin: 0;
+	background-color: #2a2d35;
+	height: 100%;
+	color: #ddd;
+	font-family: -apple-system, "Helvetica Neue", Helvetica, "Segoe UI", Arial, sans-serif;
+}
+
+body {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	background-color: #2a2d35;
+	color: #ddd;
+}
+
+a {
+	color: #ddd;
+	text-decoration: none;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #2c97de;
+    border-color: #218ad0;
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 13px;
+    line-height: 1.52857;
+    border-radius: 2px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.form-control {
+	background-color: #484848;
+	border: 1px solid #616161;
+	color: #ddd;
+}
+
+.btn.btn-default  {
+	background-color: #484848;
+	border: 1px solid #616161;
+	color: #ddd;
+}
