--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,59 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mat-tab-label {
+    color: #ddd;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-label {
+    color: #ddd;
+}
+
+.mat-tab-body-wrapper {
+	flex: 1;
+}
+
+.mat-paginator {
+    background-color: #212121;
+    color: #ddd;
+}
+
+.mat-paginator, .mat-paginator-page-size .mat-select-trigger {
+    color: #ddd;
+}
+
+.mat-select-value {
+    color: #ddd;
+}
+
+.mat-select-arrow {
+    color: #ddd;
+}
+
+.mat-button.mat-accent[disabled], 
+.mat-button.mat-primary[disabled], 
+.mat-button.mat-warn[disabled], 
+.mat-button[disabled][disabled], 
+.mat-icon-button.mat-accent[disabled], 
+.mat-icon-button.mat-primary[disabled], 
+.mat-icon-button.mat-warn[disabled], 
+.mat-icon-button[disabled][disabled], 
+.mat-stroked-button.mat-accent[disabled], 
+.mat-stroked-button.mat-primary[disabled], 
+.mat-stroked-button.mat-warn[disabled], 
+.mat-stroked-button[disabled][disabled] {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-underline {
+   background-color:rgba(255, 255, 255, 0.5);
+}*/
+
+.mat-tab-body-wrapper {
+	flex: 1;
+}
+
 html {
 	padding: 0;
 	margin: 0;
