--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,86 +1,104 @@
 :host {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    justify-content: center;
-    flex: 1;
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-self: center;
+		justify-content: center;
+		flex: 1;
 
-    >div {
-      margin-top: 50px;
-      align-self: center;
-      font-size: 30px;
-      color: rgb(202, 202, 202);
-    }
+		> div:not(.header) {
+			margin-top: 50px;
+			align-self: center;
+			font-size: 30px;
+			color: rgb(202, 202, 202);
+		}
 
-    .wait-start {
-      text-shadow: 1px 1px 5px #000;
-	  font-family: Roboto;
-	  color: #ffcf33bf;
-	  animation-name: insertcoin;
-      animation-duration: 3s;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
+		.header {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			height: 30px;
+			display: flex;
+			flex-direction: column;
 
-      -webkit-animation-name: insertcoin;
-      -webkit-animation-duration: 3s;
-      -webkit-animation-timing-function: linear;
-      -webkit-animation-iteration-count: infinite;
-    }
+			.settings {
+				width: 30px;
+				height: 30px;
+				padding: 10px 10px 25px 25px;
+				align-self: end;
+				background: #ffce33;
+				border-radius: 0 0 0 100%;
+			}
+		}
+
+		.wait-start {
+			text-shadow: 1px 1px 5px #000;
+		font-family: Roboto;
+		color: #ffcf33bf;
+		animation-name: insertcoin;
+			animation-duration: 3s;
+			animation-timing-function: linear;
+			animation-iteration-count: infinite;
+
+			-webkit-animation-name: insertcoin;
+			-webkit-animation-duration: 3s;
+			-webkit-animation-timing-function: linear;
+			-webkit-animation-iteration-count: infinite;
+		}
 
 	.buttons {
 		z-index: 1;
 	}
-  }
+	}
 
-  img {
-    align-self: center;
-  }
+	img {
+		align-self: center;
+	}
 }
 
 @-moz-keyframes insertcoin {
-  0% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 1;
+	}
 
-  50% {
-    opacity: 0;
-  }
+	50% {
+		opacity: 0;
+	}
 
-  100% {
-    opacity: 1;
-  }
+	100% {
+		opacity: 1;
+	}
 }
 
 @-webkit-keyframes insertcoin {
-  0% {
-    opacity: 1.0;
-  }
+	0% {
+		opacity: 1.0;
+	}
 
-  50% {
-    opacity: 0.0;
-  }
+	50% {
+		opacity: 0.0;
+	}
 
-  100% {
-    opacity: 1.0;
-  }
+	100% {
+		opacity: 1.0;
+	}
 }
 
 @keyframes insertcoin {
-  0% {
-    opacity: 1.0;
-  }
+	0% {
+		opacity: 1.0;
+	}
 
-  50% {
-    opacity: 0.0;
-  }
+	50% {
+		opacity: 0.0;
+	}
 
-  100% {
-    opacity: 1.0;
-  }
+	100% {
+		opacity: 1.0;
+	}
 }
